--- a/_posts/2022-09-08-INMEDIA-港大國安必修課-為確保學生完整觀課關-倍速播放-近半課堂由陳弘毅授教.html
+++ b/_posts/2022-09-08-INMEDIA-港大國安必修課-為確保學生完整觀課關-倍速播放-近半課堂由陳弘毅授教.html
@@ -20,6 +20,6 @@ author: 獨媒報導
 <p>另外14課為「必修課題」，內容包括香港的法律制度、立法會組成、行政和立法程序、《公民權利和政治權利國際公約》，以及香港刑事訴訟程序等，分別由港大法律學院的副教授葉子暘、副教授莊邁豪、首席講師李秀江及講師楊晉褀教授。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/83n4Z9N3P2" title="無標題"><img src="https://live.staticflickr.com/65535/52340950694_44a99fe8d8_b.jpg" width="1024" alt="無標題" /></a><br /><em>全國人大常委會香港基本法委員會委員、港大法律學院教授陳弘毅</em></p>
 <p><strong>關「倍速播放」 確保學生完整觀看每段課程</strong></p>
-<p>另外，為確保學生完全觀看整段課堂錄影，港大關閉「倍速播放」（fast forward ）功能，另要求學生在看完每段課堂錄影後，按下「已完成」按鈕表示自己完成該堂課堂。</p>
+<p>另外，為確保學生完全觀看整段課堂錄影，港大關閉「倍速播放」（fast forward）功能，另要求學生在看完每段課堂錄影後，按下「已完成」按鈕表示自己完成該堂課堂。</p>
 <p>教育局建議大學在2022至2025年，把「《憲法》、《基本法》和《國家安全法》教育」列為課程的重要組成部分。浸大、理大、教大、城大及嶺大己經於21/22學年以課程形式推展國安教育，中大、科大及港大於今個學年起推行國安教育。</p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
