Update VOCUS 2022-09-09 patch

--- a/_posts/2022-09-08-VOCUS-改車大師-化腐朽為神奇.html
+++ b/_posts/2022-09-08-VOCUS-改車大師-化腐朽為神奇.html
@@ -43,4 +43,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/28710160-cf09-4e0b-8a0e-02331ff6b96b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">而還有一部分就是，你可能看到改裝車子後的風格並不是你喜歡的，例如馬克托爾很鍾愛綠色系的配色，有好幾輛車幾乎都是綠色調的設計，並且帶有街頭和有點重金屬的風格。有很多車子在看的時候我都會覺得也許低調一點、不要那麼誇張，反而整體上會更亮眼，但這個改車工作室就是以浮誇出名的。</div>
 <div class="draft-block draft--p left">總而言之，我覺得很適合喜歡街頭創意，和喜愛一些經典名車的觀眾去收看這檔實境秀節目，畢竟可以看到一個特殊和台灣少見的職業的工作狀況還滿有趣的，馬克托爾也不會有錢後就把錢拿去開飲料店，還是以改裝車本行和回饋員工為主，這點也可以看到生為一位老闆、創作者和決策者，面對一個團隊和經營店鋪的拉扯，在藝術與賺錢之間抉擇，一直都創作者永恆不變的兩難處。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/cjwzOcWbPLQ"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/cjwzOcWbPLQ"></iframe></div>
