--- a/_posts/2022-09-09-VOCUS-關於桃園平埔族的二三事(六).html
+++ b/_posts/2022-09-09-VOCUS-關於桃園平埔族的二三事(六).html
@@ -8,4 +8,58 @@ tags: blog
 author: 雀榕
 ---
 
-<p><br></p>
+<h3>前言：</h3>
+<p>現在大家嘴巴所說的「桃園市」，是在2010年五都升格以後才出現，之前叫做「桃園縣」。升格前的「桃園市」則是現今的「桃園區」。升格前後，「桃園」的面積沒有什麼改變，看起來相當穩定，幾十年來沒有重大變化。我想，使用這個比較穩定的框架來談桃園平埔族，讀者的接受度會比較高，也比較容易理解。</p>
+<p>如果用地理區作框框，桃園境內有高山、丘陵、河階、台地、平原……多種地形，可以分作好幾個區域，寫成好幾篇文章，不過這樣做，已經超越我的負荷能力，需要勞煩學有專精的教授與文史工作者來寫了。為了讓內容不要太過無趣，嚇走讀者，以下我將用Q&A的方式呈現，如果這篇文章能讓您快速得到相關資訊，甚至得到一些趣味，想進一步了解桃園的平埔族，真是再好不過！</p>
+<h3>除了「虎茅庄」，桃園另一個古地名「桃仔園」該不會也是平埔族命名的吧？</h3>
+<p>有可能！可惜現今還沒有學者、地方文史工作者成功論証這點，因為桃園平埔族的語言已經消亡殆盡，而且極少詞彙被記錄下來，實在無法鐵口直斷「桃仔園就是平埔族人命名的地名」，相關人証與物証當前也極難發掘，所以我目前只能藉著質疑既定說法的可靠性，來刺激大家思考！對這個議題有興趣而想深入研究的台史愛好者，可與筆者一起努力來解開這個謎團！</p>
+<p>不論是實體書還是網路文章，凡提到「桃園」這個地名的由來，絕大多數是這樣寫的，不是說：「在清朝時，此地就有漢人入墾，當時在此地遍植桃樹，所以就稱此地為『桃園』。」不然就是寫道：「因18世紀中葉，墾戶遍植桃樹，故稱為『桃仔園』」諸如此類的句子。唯一的差別大概就是種植者的身份，有人說是佃農種的，也有人說是墾戶栽植。</p>
+<p>對於這樣的說法，我一直深信不疑，直到某天，一顆鮮嫩欲滴的桃子出現在我的面前，一連串的疑問忽然就跟著食慾，一齊從內心深處噴湧而出……</p>
+<p>疑點1：</p>
+<p>18世紀初，桃園絕大多數土地長滿草木，佃農來桃園開荒，不先追求個人溫飽，拚命種植稻米、蔬菜，卻去種植桃樹這種無法充作主食的樹種，不是很奇怪嗎？再說，土地初闢時，需要投入大量金錢、心力、時間，包括種子、秧苗、農具、耕牛……這些成本，還要承受各種不可抗力因素所造成的損失，人們哪來閒情逸致去栽種桃樹？</p>
+<p>疑點2：</p>
+<p>若真如地方誌所說「遍植桃樹」，這片遍植桃樹的土地必然要有一定的面積，否則土地太小，上面只有寥寥幾棵桃樹，根本無法吸引人們注意，更別說是成為顯目的地標，但土地的大小若超過一座國小操場的面積，那麼實際從事耕作的佃農與小地主要吃什麼？桃子無法充作主食，桃花也不能吃，桃樹的莖幹既不能吃，也難以利用(除非砍倒，當柴來燒)，可以說，遍植桃樹的土地在當時幾乎不具生產力！佃農、小地主會有種植許多桃樹的意願嗎？</p>
+<p>疑點3：</p>
+<p>清代，尤其是18世紀的台灣與閩粵沿海一帶，究竟有多少人在吃桃子？有多少文人雅士願意付錢入園欣賞桃花，或是購買桃樹回家栽種？墾戶、佃農種稙大片桃樹的動機與具體收益是什麼？至今仍沒有學者與文史工作者說清楚，講明白。</p>
+<p>疑點4：</p>
+<p>桃園的氣溫、土質、雨量、開發情況……整體來說，無論是種植桃樹生產桃子，還是讓各地文人雅士前來欣賞桃花，靠他們打賞賺錢，兩者完全不具備優勢，那18世紀的大墾戶、小租戶與佃農，包括正在漢化的平埔人為什麼要種植桃樹，而不栽種其他更有經濟效益的農作物？</p>
+<p>疑點5：</p>
+<p>我沒聽說拉拉山以外的桃園地區，曾有面積廣闊的桃園或是桃花林的傳說，也沒見過幾株擁有上百年歷史的老桃樹；更奇怪的是，地方文史工作者、學者在談桃園古地名由來的時候，幾乎都是沿襲地方誌或是前人的說法，並沒有舉出他們所見到的老桃樹、上百年歷史的桃子園、遺址裡的文物，以及其他的文獻(如：記錄台灣各地農產的農業誌)作為旁証。能確保那些地方誌與前人的說法正確無誤？</p>
+<p>疑點6：</p>
+<p>無論是待開發的重劃區、人們開發不到的荒埔地與河岸，上面往往長滿野生的桑樹、茅草、構樹、榕樹……等等植物，桃樹卻非常罕見！不像是曾經被大規模種植的樹種。</p>
+<p>疑點7：</p>
+<p>如果當時真的遍植桃花，蔚為美景的話，為什麼既沒有列入所謂的「淡水八景」或「竹塹八景」，也沒有成為台灣古典詩文的題材，更沒有成為台灣清代文人(無論本土，還是外來)歌詠的對象呢？觀賞梅花、桃花、李花……是歷來中國文人的雅趣，無論是從內地來台的宦遊文人，還是本地的文人，對於大片的桃花林是不可能視而不見的！欠缺書寫桃園地區桃花的詩文，是否代表18世紀的桃園地區根本就沒有桃樹林！即使有，也是雜樹叢裡的零星幾棵，並沒有所謂「遍植桃樹」這回事？</p>
+<p>所謂「因18世紀中葉，墾戶遍植桃樹，故稱『桃仔園』」諸如此類的說法，有沒有可能是19世紀，甚至是日治時代文人的穿鑿附會？因為疑點真的很多！顯示主流既定說法相當不可靠，真實情況會不會是這樣的……</p>
+<p>「桃仔園」是平埔族人命名的地名，但因平埔族語消亡，真實涵義也跟消逝，只留下語音，以及文人以三個漢字寫成的「桃仔園」。由於文人撰寫地方誌，需要解釋這個地名的由來，因此開始望文生義，由「桃園」這個詞出發，自行腦補，創造出我們今天所見的主流說法──墾荒的先民遍植桃樹，所以當地被命名為桃仔園。</p>
+<p>我不敢說真實情況100%就是如此，但可以推論：既定說法相當不可靠，很可能是錯的！這個地名很可能不是閩粵移民創造，而是由長年在桃園居住的平埔族人命名的。先在這裡，告一段落，歡迎有興趣的讀者一起來探究吧！</p>
+<img src="https://images.vocus.cc/a12c58f7-1433-421b-a897-8b39575bbaec.jpg" alt="「桃仔園」、「桃園」有可能是平埔族創造出來的地名。(圖片出處：維基共享資源--「桃」)">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">「桃仔園」、「桃園」有可能是平埔族創造出來的地名。(圖片出處：維基共享資源--「桃」)</figcaption>
+<h3>桃園境內有哪些平埔族留下來的古地名？</h3>
+<p>現今中壢區的「芝芭里」，古代是「芝芭里社」的地盤，後來平埔族神秘地消失了，地名卻留下來。</p>
+<p>現今的中壢區，古稱「澗仔壢」，地名來源有兩種說法，一種是主流的說法，說是：入墾的粵民見到當地有許多小溪谷，於是用客家話命名為「澗仔壢」。另一種說法比較少人接受，說是：古時，那裡有平埔族的聚落，所以就將社名「澗仔力」當作地名，後來寫成「澗仔壢」。</p>
+<p>現今的龜山區，古稱「龜崙」，因為那裡住了一群非常知名的桃園平埔族──龜崙族。龜山區還有與龜崙族有關的地名，如：龜崙山、龜崙族後代聚居的「下社」與「頂社」。</p>
+<p>八德區的「霄裡」，源自另一群相當知名的桃園平埔族──霄裡社。位在大溪、平鎮、八德三區交界的地方，有一座人工開鑿的大池，由於是霄裡人與漢人合作開鑿的，所以名為「霄里大池」。</p>
+<p>平鎮區有「東社」、「下東社」，離「霄里大池」不遠，有可能是霄裡系統平埔族的居住地，而平鎮區的「山仔頂庄」、「安平鎮庄」、「雙連坡庄」據說古代設有土牛溝與隘寮，不過這些大多已不存在。</p>
+<p>大溪區最早被人稱為「大姑陷」，源於霄裡社人對大漢溪的稱呼，用羅馬字母標示為「Takoham」，用漢字書寫，有作「大姑陷」，也有作「大姑崁」，後來被台灣總督府改名為「大溪」。與平埔族有關的地名還有「番子寮」、「社角」。目前還有霄裡社的後代住在社角，「番子寮」的存在則顯示當地過去是平埔族的地盤，現在可能還有後代住在那裡。</p>
+<p>涵蓋桃園區與蘆竹區部分地區的「南崁」，以前是一群非常知名的桃園平埔族──南崁社的勢力範圍，雖然後來被鄭成功的部隊驅離，也被大批閩粵移民侵擾，不過南崁社後代至今仍頑強生活在蘆竹的坑子、外社、坑口、山鼻等地。其過往的勢力範圍被命名為「南崁」。</p>
+<p>新屋、觀音、大園、楊梅等地，過去應該有平埔族居住，但不知是被郭光天、薛啟隆等墾戶「逐人滅社」，還是漢化甚早，原來的平埔族地名被閩粵移民創造的新名幾乎全面代換？</p>
+<p>總之，平埔族的地名很少，目前我知道的有：新屋區的「番婆坟」，其他就不曉得了，這個區域也是桃園平埔族的「空白」地帶，坊間介紹平埔族的書籍、網路文章，除了提到新屋「番婆坟」與涵蓋中壢與大園之間的「芝芭里」，其他……我幾乎見不到！到底是什麼樣的平埔族活躍其上，南崁社、泰雅族、霄里社、還是南邊的道卡斯族，至今仍是個謎！</p>
+<p>以上是我彙集學者論文與相關書籍、網文所得的地名，相信還有更多這類的地名，等待我們發現！</p>
+<h3>這些流傳下來的平埔族地名，透露哪些訊息呢？</h3>
+<p>桃園有一個很詭異的現象，就是：芝芭里、舊社、頂社、番婆坟……這些古地名還在，原本居住其上的平埔族人，後來絕大多數卻「下落不明」！不僅史書沒有寫，地方誌沒有提，連住在當地的漢人也講不出所以然，往往用一種應付且不確定的口氣回應發問者，說：「那些番仔應該是被人趕到山裡面去了！」</p>
+<p>桃園的地方誌與相關的網路文章，無不寫道：乾隆年間，大批貧苦的閩粵移民追隨郭光天、薛啟隆這些大墾戶的腳步，進入桃園墾荒，從平埔族手上取得土地，然後將荒地開闢成良田；可是整個桃園地區平埔族的死活與遷徙動向，還有這些移民取得土地的方式──不是沒寫，就是寫的很簡單，看起來……平埔族好像真的從人間蒸發了！</p>
+<p>如果平埔族人當年被閩粵移民像掃地一般驅趕的話，我想，芝芭里、舊社、頂社、番婆坟……這些平埔族的聚落名與地名，不但不會被後者採用，而且還會被後者提出的新地名全部取代。為什麼？</p>
+<p>因為平埔族人如果全部被趕，或是所剩無幾，佔人口全部或絕大多數的閩粵移民大可按照自己的母語與認知方式為山川、河流命名，將之命名為○湖、○埔、田心、湳仔，也能按照當地的人文景觀，用○股、○結、○厝、○屋、○○廟、○寮等詞，創造新地名，或是拿來代換平埔族人的舊名。閩粵移民自有一套命名方式，並不需要100%依賴平埔族的舊地名。</p>
+<p>平埔族的地名之所以能流傳下來，恐怕是因為當年的閩粵移民沒有全面趕走原住民，而是與平埔族比鄰而居，或是番漢雜處。平埔族人很可能在閩粵移民來到當地以後，待了一段時間才離開，或者他們從來就沒有離開！所以晚到的閩粵移民無法輕易更改地名，即使日後提出改變的意見，也不容易得到其他人，尤其是更早住在當地的平埔族人及其混血後代採納，例如：中壢的「芝芭里」，讀音類似罵人或女性生殖器的諧音，20年前里民大會，有里民建議改名，但是沒有獲得全場人士的支持，而且當地多數里民並不在意這個問題，對改名興致缺缺。</p>
+<p>總之，這些流傳下來的平埔族地名，透露了以下的訊息：</p>
+<p>1.當地曾是平埔族人的聚落、田地、獵場，或是部落的某個設施。</p>
+<p>2.當地不但有平埔族人住過，他們的後代子孫可能還留在那裡，只是被閩粵移民帶來的強勢文化給同化了，大幅修改或整個喪失自己的歷史記憶、族群認同與傳統的生活方式。</p>
+<p>3.當年入墾桃園地區墾民佃戶沒有全面驅趕原住的平埔族，大多數人在官府的控管，及尋求溫飽的現實壓力之下，終究沒有能力反客為主，仍然需要向一些平埔族部落或是平埔族的頭人租地耕種，維持生計，當然就無法把後者趕走。</p>
+<img src="https://images.vocus.cc/f13f130e-1fa9-448e-9cdb-203863d5ecb3.jpg" alt="「桃園」真的遍植過桃花？也許這是一個美麗的誤會！(圖片出處：維基共享資源--「桃」)">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">「桃園」真的遍植過桃花？也許這是一個美麗的誤會！(圖片出處：維基共享資源--「桃」)</figcaption>
+<h3>(第六部分結束)</h3>
+<p>參考資料：</p>
+<p>1.洪英聖「<a href="https://www.merit-times.com/NewsPage.aspx?unid=558493">《地名逸聞》桃園縣篇（8） 中壢市 南北交通重要孔道</a>」2003年10月20日人間福報。</p>
+<p>2.張素玢「<a href="https://museum02.digitalarchives.tw/dmp/2000/pingpu/education/Essay/essay1998b/nLACAMPP/nLACAMPP.htm#m">南崁地區的平埔族</a>」(網路文章)。</p>
+<p>3.詹素娟、張素玢《<a href="https://www.books.com.tw/products/0010362334">台灣原住民史：平埔族史篇(北)</a>》，國史館台灣文獻館。</p>
+<p>4.「<a href="https://www.ettoday.net/news/20210702/2021061.htm">神秘「芝芭里」曝！超多億萬富豪在這裡　住「青昇路」也有保祐</a>」2021年7月2日東森新聞雲。</p>
