--- a/_posts/2022-09-09-INMEDIA-警引爆鶴咀二戰水雷掀5米水花-稱-證明可處理軍事級任務.html
+++ b/_posts/2022-09-09-INMEDIA-警引爆鶴咀二戰水雷掀5米水花-稱-證明可處理軍事級任務.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p><strong>引爆後傳巨響 水面浮黑色炸藥殘骸</strong></p>
 <p>行動在今早11時展開，中午近12時，兩艘載有特別任務連潛水人員（俗稱「水鬼隊」）及爆炸品處理課警員的快艇，高速駛近水雷位置旁的指揮船。約10分鐘後，警員再從快艇轉落小橡皮艇，快艇亦持續兜圈，劃出一個圓形示意水雷位置。其後，六名警員潛入水底進行任務。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0VR6sSQwd9" title="無標題"><img src="https://live.staticflickr.com/65535/52345162505_f57dba0083_b.jpg" width="1024" alt="無標題" /></a></p>
-<p>至中午1時，警員全數上水後，警方船隻先發射4枚信號彈，所有船隻隨即高速駛離。逾5分鐘後，水雷被引爆並激起大浪，巨響在數秒後才傳到記者所在的山頂位置，水面亦浮現一圈黑色的炸藥殘骸。</p>
+<p>至中午1時，警員全數上水後，警方船隻先發射4枚信號彈，所有船隻隨即高速駛離。逾5分鐘後，水雷被引爆並激起大浪，巨響在數秒後才傳到記者所在的山頂位置，水面亦浮現一圈黑色的TNT炸藥殘骸。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/EeHGif70iL" title="爆炸品處理課署理高級炸彈處理主任李展超（左）"><img src="https://live.staticflickr.com/65535/52345193585_639965a092_b.jpg" width="1024" alt="爆炸品處理課署理高級炸彈處理主任李展超（左）" /></a><br /><em>爆炸品處理課署理高級炸彈處理主任李展超（左）</em></p>
 <p><strong>行動警員：感受到強烈的衝擊波</strong></p>
 <p>整個行動歷時約2小時，警方之後在香港大學太古海洋科學研究所會見傳媒。有份參與行動的行動部爆炸品處理課署理高級炸彈處理主任李展超指，已完全摧毀水雷，行動中無人傷亡，印證了警方準確的風險評估。他指出，世界各地處理戰時遺留的水雷均屬軍事任務，「證明咗我哋警隊有一個能力，去處理一啲軍事級別嘅任務」。</p>
