--- a/_posts/2022-09-09-PQ-搶走台灣環球晶50億美元在韓設廠計畫-美國遭韓媒指-背刺盟友.html
+++ b/_posts/2022-09-09-PQ-搶走台灣環球晶50億美元在韓設廠計畫-美國遭韓媒指-背刺盟友.html
@@ -8,7 +8,7 @@ tags: blog
 author: 林貝利
 ---
 
-<p>美國商務部長雷蒙多（Gina Raimondo） 6 日在接受《華爾街日報》採訪時表示，她說服了一間考慮在韓國建新工廠的台灣矽晶圓廠環球晶在美國投資。而當天她在白宮解釋所謂「晶片法」的同時，也對韓國等外國半導體公司放話稱「如果他們在中國投資，就會收回補貼」。</p>
+<p>美國商務部長雷蒙多（Gina Raimondo） 6 日在接受《華爾街日報》採訪時表示，她說服了一間考慮在韓國建新工廠的台灣矽晶圓廠在美國投資。而當天她在白宮解釋所謂「晶片法」的同時，也對韓國等外國半導體公司放話稱「如果他們在中國投資，就會收回補貼」。</p>
 
 
 
@@ -24,7 +24,7 @@ author: 林貝利
 
 
 
-<p>對此，雷蒙多部長在電話中掛保證「我們會配合你的（We will make the math work）」花了約 1 小時說服徐秀蘭。環球晶圓在通話 2 週後的 6 月 27 日宣佈在德州謝爾曼打造一座耗資 50 億美元的新工廠。 環球晶圓還提出願景，將在在新工廠雇用最多 1500 名員工，每月生產 120 萬片晶圓供應給英特爾等公司。美國政府 7 月也在參眾議院通過了「晶片法案」，迅速回應環球晶圓的補貼請求。</p>
+<p>對此，雷蒙多部長在電話中掛保證「我們會配合你的（We will make the math work）」花了約 1 小時說服徐秀蘭。環球晶圓在通話 2 週後的 6 月 27 日宣佈在德州謝爾曼打造一座耗資 50 億美元的新工廠。 環球晶圓還提出願景，將在新工廠雇用最多 1500 名員工，每月生產 120 萬片晶圓供應給英特爾等公司。美國政府 7 月也在參眾議院通過了「晶片法案」，迅速回應環球晶圓的補貼請求。</p>
 
 
 
@@ -48,7 +48,7 @@ author: 林貝利
 
 
 
-<p>雷蒙多部長明確表明，美國政府的真正目的是在於確保自身產業的競爭力。 韓媒《中央日報》指出近日美國在提倡以「晶片四方聯盟（Chip 4）」制衡中國的同時，在面對「晶片國產化」的利益，對其盟友做出無情的舉動。美國總統拜登在 5 月訪問韓國時，取得現代汽車會長鄭義宣承諾到 2025 年為止會投資 105 億美元，在喬治亞州設立電動汽車工廠。</p>
+<p>雷蒙多部長明確表明，美國政府的真正目的是在於確保自身產業的競爭力。 韓媒《中央日報》指出近日美國提倡以「晶片四方聯盟（Chip 4）」制衡中國的同時，在「晶片國產化」的利益面前，會對其盟友做出無情的舉動。</p>
 
 
 
@@ -56,7 +56,11 @@ author: 林貝利
 
 
 
-<p>但上個月簽署的「降低通膨法案」（IRA，Inflation Reduction Act）當中包括一項把不在北美生產的電動汽車排除在補助對象之外的提案，衝擊到現代汽車等在韓國生產電動汽車的公司出口到美國。對此，韓國汽車業界和韓國政府聲稱這是對「韓國製電動汽車的歧視」。拜登政府公開設定的產業戰前線是「美中競爭」，但作為擁有共同價值觀的核心盟友的韓國，也是競爭對手。</p>
+<p>報導舉例美國總統拜登在 5 月訪問韓國時，取得現代汽車會長鄭義宣承諾到 2025 年為止會投資 105 億美元，在喬治亞州設立電動汽車工廠。但上個月簽署的「降低通膨法案」（IRA，Inflation Reduction Act）當中包括一項把不在北美生產的電動汽車排除在補助對象之外的提案，衝擊到現代汽車等在韓國生產電動汽車的公司出口到美國。</p>
+
+
+
+<p>對此，韓國汽車業界和韓國政府聲稱這是對「韓國製電動汽車的歧視」。拜登政府公開設定的產業戰前線是「美中競爭」，但作為擁有共同價值觀的核心盟友的韓國，也是競爭對手。</p>
 
 
 
@@ -96,7 +100,7 @@ author: 林貝利
 
 
 
-<p>而韓國尹錫悅政府也成立了「加強半導體競爭力特別委員會」，並提出包含各種補助措施的修法案，但國會審議一直沒有進展。這項半導體特別法甚至在上週舉行的國會產業通商資源中小型風險企業委員會上都沒有討論過，甚至也不知道在現在 9 月的國會會期中會不會進行審議。美國國會在短短兩週內就通過了《降低通膨法案》以支援自家的製造業，但韓國國會卻陷入了政治紛爭，連一條支援作為經濟命脈的半導體行產的法案都沒辦法成立。問題相當嚴重。</p>
+<p>而韓國尹錫悅政府雖然也成立了「加強半導體競爭力特別委員會」，並提出包含各種補助措施的修法案，但國會審議一直沒有進展。這項半導體特別法甚至在上週舉行的國會產業通商資源中小型風險企業委員會上都沒有討論過，甚至也不知道在現在 9 月的國會會期中會不會進行審議。美國國會在短短兩週內就通過了《降低通膨法案》以支援自家的製造業，但韓國國會卻陷入了政治紛爭，連一條支援作為經濟命脈的半導體產業的法案都沒辦法成立。問題相當嚴重。</p>
 
 
 
