--- a/_posts/2022-09-10-PQ-蔡霞-習近平恐再連任並進犯台灣-唯-戰爭中屈辱地失敗-能讓習垮台.html
+++ b/_posts/2022-09-10-PQ-蔡霞-習近平恐再連任並進犯台灣-唯-戰爭中屈辱地失敗-能讓習垮台.html
@@ -16,7 +16,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930.jpg" alt="" class="wp-image-114023" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中共中央黨校退休教授蔡霞<br>他曾在外媒訪問時，呼籲國際社會聯手阻止中共滲透國際組織，並防堵習的極權思想擴散。<b4>他在被黨校開除黨籍和取消退休待遇後表示，很高興「與這個黑幫一樣的政黨徹底脫鉤」<br>圖／中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930.jpg" alt="" class="wp-image-114023" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/1d60a276-3499x2333_141418486930-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中共中央黨校退休教授蔡霞<br>他曾在外媒訪問時，呼籲國際社會聯手阻止中共滲透國際組織，並防堵習的極權思想擴散。<b4>他在被黨校開除黨籍和取消退休待遇後表示，很高興「與這個黑幫一樣的政黨徹底脫鉤」<br>圖／中央社</figcaption></figure></div>
 
 
 
