--- a/_posts/2022-09-12-INMEDIA-社民連擺街站遭食環圍封-陳寶瑩憂示威請願不得使用橫額.html
+++ b/_posts/2022-09-12-INMEDIA-社民連擺街站遭食環圍封-陳寶瑩憂示威請願不得使用橫額.html
@@ -19,7 +19,7 @@ author: 獨媒報導
 <strong>稱街站主題已很安全 嘆「咁都被滅聲非常好笑同荒謬」</strong></p>
 <p>陳寶瑩指，當時有嘗試查問擺街站的條件，惟食環署未有回應。她認為擺街站是發聲的常見做法，過去社民連都未曾試過被沒收橫額，反映政府正用不同方式限制公開活動。她擔心日後設街站或示威請願時，手持橫額表達訴求亦會被禁止，影響市民的權利。</p>
 <p>她強調，昨日擺街站的目的是就「勞工權益」及「土地規劃」兩方面，就李家超上任後首份施政報告表達意見，望政府關注工傷及清潔工在酷熱天氣下工作的問題，及反對當局優先發展綠化地帶。她形容主題已經屬「最有安全系數」，卻仍受阻撓，嘆：「咁樣都被人滅聲都非常之好笑同荒謬。」</p>
-<p><strong>民間電台5月被指違反統同一規定被票控</strong></p>
+<p><strong>民間電台5月被指違反同一規定被票控</strong></p>
 <p>食環署回覆傳媒查詢時指，署方及相關部門於記利佐治街行人專用區一帶採取聯合行動，向違法人士作出檢控，並移除未經許可在政府土地展示的宣傳品。署方指出，如有足夠證據，將向相關人士追討移走費用。 </p>
 <p>翻查資料，食環署曾用同一條例票控民間電台。今年5月，民間電台於銅鑼灣擺街站期間，被食環署票控違反《公眾衛生及市政條例》第104A條「禁止未經准許而展示招貼或海報」，並被沒收橫額和燈牌。</p>
 </div></div></div>
