--- a/_posts/2022-09-12-PQ-為莫習會鋪路-印中兩軍在邊境戈格拉-溫泉區開始回撤.html
+++ b/_posts/2022-09-12-PQ-為莫習會鋪路-印中兩軍在邊境戈格拉-溫泉區開始回撤.html
@@ -12,7 +12,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh.jpg" alt="" class="wp-image-114224" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國外交部證實，習近平預計出席9月中登場的上海合作組織元首峰會，這將是武漢肺炎疫情爆發以來，習近平首度出訪海外。預期將會與關係交惡的印度總理莫迪會面。<br>圖／UzA
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh.jpg" alt="" class="wp-image-114224" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/580d5556-fcdu3qsxwaaoeoh-768x512.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國外交部證實，習近平預計出席9月中登場的上海合作組織元首峰會，這將是武漢肺炎疫情爆發以來，習近平首度出訪海外。預期將會與關係交惡的印度總理莫迪會面。<br>圖／UzA
 @uzauz</figcaption></figure></div>
 
 
