--- a/_posts/2022-09-12-INITIUM-锯木机停了-为深港融合发展让路的志记鎅木厂.html
+++ b/_posts/2022-09-12-INITIUM-锯木机停了-为深港融合发展让路的志记鎅木厂.html
@@ -11,8 +11,8 @@ author: 李慧筠
 <p>「“年青人可能比我更关心这里，觉得是个希望。希望，即是一个可以发挥的自由空间。”」</p><p>端传媒记者 李慧筠、实习记者 尹宝盈 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220913-hongkong-chi-kee-sawmill-and-timber/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/09/69d13038a3824699887f856bb57458dc.jpg?imageView2/1/w/1080/h/810/format/jpg" alt="志记鎅木厂的妹妹王美娇、王鸿权和弟弟王鸿强。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">志记鎅木厂的妹妹王美娇、王鸿权和弟弟王鸿强。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><small>【编者按】广东话“鎅”的意思，即切割。在香港，鎅木厂即切割及加工木头的厂房。</small></p>
 <p>在新界上水志记鎅木厂的中央，有一座深入地牢的大型锯木机“企头锯”（Giant Saw）。王鸿权爬上超过2米高的机器，几乎整个人没入机器中。他调整锯刀，拉动把手，8片锯刀齐声上下跳动。把一条原木送进去，刀片接触木头的当刻，木屑四溅。<br><br>企头锯是木厂的心脏，却可能即将停止运作。9月13日，是古洞志记鎅木厂搬迁的期限。自7月开记者会，呼吁地政署多给予两年期限后，王鸿权、弟弟王鸿强和妹妹王美娇在闷热的木厂里一边鎅木，一边应付蜂拥而来的传媒和游人。对着镜头，王鸿权咧开招牌笑容，像录音机般一遍又一遍地诵读志记74年的历史。同样74岁的他，在木厂里长时间工作，因疲惫不免失神。<br><br>大半世纪以来，志记的兴衰荣枯依附着香港发展的脉搏。王鸿权说，“这里都是借来的地方、借来的时间；以前这里是个实验室。”1940年代起，木厂购入进口木加工，做到风生水起，九七后转型回收木业苟延残喘，只是为生存。现在，志记成为回收木业不可或缺的上游，被青年木匠和艺术家视之为一种选择、一种可能。<br><br>王鸿权近年开始想，生命里的选择，可能不仅仅只是为了生存。</p>
-<figure class="widget-youtube" data-width="16" data-height="9" data-video-id="sKx5z3VEOkw">
-<iframe width="100%" height="312px" src="https://www.youtube.com/embed/sKx5z3VEOkw" frameborder="0" allowfullscreen> </iframe>
+<figure class="widget-youtube" data-width="16" data-height="9" data-video-id="UauLa_FYYUI">
+<iframe width="100%" height="312px" src="https://www.youtube.com/embed/UauLa_FYYUI" frameborder="0" allowfullscreen> </iframe>
 </figure>
 
 <h2>解决困难的人</h2>
