--- a/_posts/2022-09-14-INMEDIA-教大向五人頒授榮譽院士-包括-神奇小子-蘇樺偉.html
+++ b/_posts/2022-09-14-INMEDIA-教大向五人頒授榮譽院士-包括-神奇小子-蘇樺偉.html
@@ -13,5 +13,5 @@ author: 獨媒報導
 <p>蘇樺偉曾八次當選香港傑出運動員，2000年獲頒行政長官社區服務獎狀，2005年更獲選為香港十大傑青，並獲頒榮譽勳章，2013年再獲頒授銅紫荊星章。</p>
 <p>國家運動員、男子田徑100米亞洲紀錄保持者<a href="https://www.inmediahk.net/node/%E9%AB%94%E8%82%B2/%E8%98%87%E7%82%B3%E6%B7%BB%EF%BC%9A%E8%98%87%E6%A8%BA%E5%81%89%E6%89%8D%E6%98%AF%E8%98%87%E7%A5%9E-%E7%9C%8B%E5%88%B0%E5%85%A9%E5%9C%B0%E9%9D%92%E5%B9%B4%E7%82%BA%E5%A4%A2%E6%83%B3%E5%A5%AE%E9%AC%A5">蘇炳添</a>，在去年東京奧運後訪港，便曾讚揚蘇樺偉才是其「心目中的蘇神」。另外，蘇樺偉的奮鬥事蹟在去年亦被改編成電影《媽媽的神奇小子》。</p>
 <p>社會企業研究院去年向蘇樺偉頒授資深院士，肯定他為殘疾人運動的付出，和對社會的貢獻，當時便有評論認為，傳統大學應向他頒授學士學位。蘇樺偉今次獲教大頒授榮譽院士，可算是獲得充分肯定。</p>
-<p>另外四名獲頒授榮譽院士，包括嗇色園黃大仙祠監院李耀輝（義覺）道長、佳寧娜集團控股有限公司主席馬介休、柏斯音樂、集團總經理及業務發展總監鮑吳愛岑及廠商會會長史立德。</p>
+<p>另外四名獲頒授榮譽院士，包括嗇色園黃大仙祠監院李耀輝（義覺）道長、佳寧娜集團控股有限公司主席馬介欽、柏斯音樂、集團總經理及業務發展總監鮑吳愛岑及廠商會會長史立德。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
