Update VOCUS 2022-09-15 patch

--- a/_posts/2022-09-14-VOCUS-王者之聲-無畏霜雪的英王喬治六世.html
+++ b/_posts/2022-09-14-VOCUS-王者之聲-無畏霜雪的英王喬治六世.html
@@ -21,9 +21,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">重新為各位介紹，伊莉莎白二世的父親，<span style="font-weight: bold; ">無畏霜雪的英王喬治六世</span>（King George VI / Albert Frederick Arthur George Windsor，1895－1952；在位：1936－1952）</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">「至高榮譽者，即是為他人服務。」</span>，正是他所留下的名言之一。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/2fdb7aae-89fd-47cc-85d5-c1e534e955bb.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/EcxBrTvLbBM"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/EcxBrTvLbBM"></iframe></div>
 <div class="draft-block draft--p left">當年藉由《王者之聲：宣戰時刻》（The King's Speech）再次重返英倫，擁抱廣大群眾，身為奧斯卡金像獎桂冠之作的故事主人翁，也是英王查理（查爾斯）三世（Charles III）的祖父，於曾祖母維多利亞女王（Queen Victoria）在位時誕生，幼名喚為艾伯特（Albert），亦來自早逝曾祖父親王（Albert, Prince Consort）之名的喬治六世，其實和一般人心目中對皇室成員（aka.貴公子）的「憧憬」……</div>
 <div class="draft-block draft--p left">嗯，<span style="font-weight: bold; ">完全不符合！</span></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">左右手，罹患重度協調障礙；兩隻腳，也帶有些畸形，也就是所謂的「X」型腿；更糟糕的缺陷（弱點），也是世人所熟知的是，艾伯特有非常嚴重的「口吃」跟「上台恐懼症」！</span></div>
@@ -53,12 +51,9 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">我要求所有人，在這個嚴峻的時期裡，保持冷靜、堅定和團結。任務會相當艱鉅。未來可能還會有黑暗的日子要攜手度過，戰爭不會侷限於戰場。但我們只能做我們認為正確的事情，並虔誠地將我們的一切交託給上帝。</span></div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/af6c86b0-3462-46a5-852d-094fd16bb9af.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">鏗鏘有力，不做作也不矯情，一場短短的宣講，鼓舞了整個英國人民，不畏戰也不怯戰的喬治六世，更不願聽從內閣或幕僚的規勸避居鄉間或偏安加拿大，而是堅守在大倫敦市區與無數人民站在一起，挺住納粹德國無間斷的砲彈空襲。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/p1TubkzxPFY"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/p1TubkzxPFY"></iframe></div>
 <div class="draft-block draft--p left">他也趁空檔練習手槍等近距離交戰技能，以防希特勒的魔爪萬一登陸時，他能以國王之尊站在前線，游擊巷戰也好，平原對峙也罷，目的就是要殺敵衛國！</div>
 <div class="draft--imgFloat draft-block"><div><img src="https://images.vocus.cc/594bb251-8403-4bda-b0d2-07dc3363c018.webp"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">揚神威，張天網，</span></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">保王室，殲敵方，</span></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">一鼓滌蕩。</span></div>
@@ -67,15 +62,12 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">讓我們齊仰望，</span></div>
 <div class="draft-block draft--p left"><span style="font-style: italic; font-weight: bold; ">天佑國王！</span></div>
 <div class="draft-block draft--p left">《天佑國王》（God Save the King）的第二段歌詞</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">西元1939年時，喬治六世成為首位在美國發表〈獨立宣言〉脫離英國統治之後，蒞臨新大陸美國進行正式訪問的英國君主。</div>
 <div class="draft-block draft--p left">在喬治六世多次的信心喊話跟親自訪視下，日不落帝國即使處境艱辛，王弟肯特公爵（Prince George, Duke of Kent）也不幸在西元1942年8月陣亡，但英國總算是安然度過了納粹的侵略危機，喬治六世與首相邱吉爾，還有無數英倫子民，齊心捍衛了歐洲最後的自由防線，更守護了文明世界得以延續的神聖堡壘！喬治六世在人民心中，也不再是年輕時口吃靦腆的艾伯特王子，而是備受愛戴、廣獲尊崇的一代帝王！</div>
 <div class="draft-block draft--p left">西元1952年2月，距離最後一次出現在公眾場合，也就是1月底於機場歡送出訪澳洲與肯亞的長女伊莉莎白公主不久後，喬治六世因累積大量菸癮，還有戰時過度操勞所引發的後遺症（肺癌），2月6日與世長辭，享年56歲。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/ce52a5e8-56a3-4454-ab0b-4b777d8f19b5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">「海德公園角」（Hyde Park Corner），是當時國王過世時的行動暗語；隔年6月2日，已即位女王的伊莉莎白完成加冕儀式。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/jn94s0eyRLo"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/jn94s0eyRLo"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
 <div class="draft-block draft--p left">西元2022年9月19日，待完成國葬大典之後，伊莉莎白女王將安葬於溫莎城堡旁的喬治六世紀念禮拜堂（King George VI Memorial Chapel），與夫婿菲利浦親王，還有父親喬治六世、母親伊莉莎白王太后跟妹妹瑪格麗特公主永遠團圓相聚，不再分離。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
@@ -87,4 +79,3 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><a href="https://www.tatler.com/article/king-george-vis-coronation-day" target="_blank" class="draft--a">https://www.tatler.com/article/king-george-vis-coronation-day</a></div>
 <div class="draft-block draft--p left"><a href="https://www.royal.uk/king-george-vis-ve-day-broadcast" target="_blank" class="draft--a">https://www.royal.uk/king-george-vis-ve-day-broadcast</a></div>
 <div class="draft-block draft--p left"><a href="https://people.com/royals/queen-elizabeth-shares-photo-with-king-george-vi-for-fathers-day/" target="_blank" class="draft--a">https://people.com/royals/queen-elizabeth-shares-photo-with-king-george-vi-for-fathers-day/</a></div>
-<div class="draft-block draft--p left"></div>
