--- a/_posts/2022-09-14-INMEDIA-增7,579宗個案-張竹君-仍需觀望會否反彈.html
+++ b/_posts/2022-09-14-INMEDIA-增7,579宗個案-張竹君-仍需觀望會否反彈.html
@@ -26,7 +26,7 @@ author: 獨媒報導
 <p>1A、 2B、 5C班早前有10宗個案。今日再新增兩個班別有個案，2A班、1C班各有4名學生確診。衞生防護中心表示，確診學生居住分別在兩個宿舍，會共用設施，懷疑因此有傳播。</p>
 <p>宿舍共有129名學生，宿舍內的其他學生已離開，並要作檢疫，其中一個宿舍20間房中，15間房有個案。另有95名學生沒有入住宿舍，當局表示如果不涉及停課班別，可繼續上課。</p>
 <blockquote><p>＊沙田宣道會鄭榮之中學</p></blockquote>
-<p>4B班早前有6名學生確診，現全校累計有39名、14名老師確診，25班中有16班出現個案，全校停課一周。</p>
+<p>4D班早前有6名學生確診，現全校累計有39名、14名老師確診，25班中有16班出現個案，全校停課一周。</p>
 <p><strong>多10人死亡 均患長期病患</strong></p>
 <p>在9月11日的樣本中，懷疑 BA.4 或 BA.5 佔79.3%，按比例計算，BA.5 佔整體個案約70%，BA.4 佔9%，BA.2.12.1 佔4.6%，BA.2.2 佔16%。</p>
 <p>多10名患者離世，第五波累計9,617人死亡。死者分別為8男2女，年齡介乎72至99歲，當中有4人未完成接種三針疫苗。醫管局表示，死者均為長者，還有多種長期病患。</p>
