--- a/_posts/2022-09-14-INMEDIA-支聯會顛覆案-李卓人-何俊仁擬不認罪-與無答辯意向支聯會同交付高院審訊.html
+++ b/_posts/2022-09-14-INMEDIA-支聯會顛覆案-李卓人-何俊仁擬不認罪-與無答辯意向支聯會同交付高院審訊.html
@@ -12,6 +12,7 @@ author: 獨媒報導
 <p>案件由國安法指定法官、主任裁判官羅德泉處理。控方代表為署理助理刑事檢控專員張卓勤；已被取消公司註冊的支聯會由破產管理署委聘、8.18流水集會案其中一名控方大律師林芷瑩代表，李卓人由律師文浩正代表；已完成交付程序的鄒幸彤亦有列席。</p>
 <p><a href="https://www.inmediahk.net/node/%E7%A4%BE%E9%81%8B/%E6%B6%89%E6%94%AF%E8%81%AF%E6%9C%83%E9%A1%9B%E8%A6%86%E6%A1%88-%E4%BD%95%E4%BF%8A%E4%BB%81%E5%90%91%E9%AB%98%E9%99%A2%E7%94%B3%E4%BF%9D%E9%87%8B%E7%8D%B2%E6%89%B9">上月高院申保釋獲批</a>的何俊仁，首度以獲准保釋的身分出席本案聆訊，開庭前與旁聽人士打招呼和交談，聆訊時坐在被告欄外。還柙中的李卓人和鄒幸彤步入法庭時，旁聽席高呼「人哥！」、「阿彤！」，二人揮手回應。社民連曾健成、支聯會前常委徐漢光及前幹事陳多偉等亦到庭旁聽，鄒幸彤一度對旁聽席笑說：「你哋咁多人嚟」，又做出心心手勢，惟被身旁女懲教阻止。</p>
 <p>羅德泉引支聯會早前答辯意向為「沉默」（silence），故將被視為「不認罪」交付審訊，而李卓人和何俊仁則擬不認罪。羅其後正式將3名被告交付高等法院原訟庭審訊。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/D65h12Hv6h" title="無標題"><img src="https://live.staticflickr.com/65535/52355758697_3c8787e2bc_b.jpg" width="1024" alt="無標題" /></a></p>
 <p>何俊仁原定今午到警署報到，申請豁免獲批。散庭時，何俊仁走近被告欄，向欄內的李卓人和鄒幸彤揮手和說話，鄒做出勝利手勢，並在臨入囚室時喊「結束一黨專政」。</p>
 <p>根據《國安法》第23條，干犯「煽動顛覆國家政權」者，情節嚴重的，處五年以上十年以下有期徒刑；情節較輕的，處五年以下有期待刑、拘役或管制。</p>
 <p><strong>首提堂逾一年後交付高院 何俊仁上月申保釋獲批</strong></p>
