--- a/_posts/2022-09-14-PQ-美國將審議最新挺台-台灣政策法案-賦予台灣主要非北約盟友地位.html
+++ b/_posts/2022-09-14-PQ-美國將審議最新挺台-台灣政策法案-賦予台灣主要非北約盟友地位.html
@@ -8,7 +8,7 @@ tags: blog
 author: 霍布斯潘
 ---
 
-<p>美國聯邦參議院外交委員會審議最新挺台的「台灣政策法案」（Taiwan Policy Act of 2022, S.4428），如無意外將於美國時間 14 日順利完成審議，並進行第一次表決。此次的台灣政策法內容涉及廣泛，包括台灣國際地位、美國軍事協助，更被視為 1979 年《台灣關係法》以來美國最力挺台灣的重要法案。</p>
+<p>美國聯邦參議院外交委員會審議最新挺台的「2022 台灣政策法」（Taiwan Policy Act of 2022, S.4428），如無意外將於美國時間 14 日順利完成審議，並進行第一次表決。【最後結果為，參議院以 17 : 5 通過支持《 2022 台灣政策法》】。此次的台灣政策法內容涉及廣泛，包括台灣國際地位、美國軍事協助，更被視為 1979 年《台灣關係法》以來美國最力挺台灣的重要法案。</p>
 
 
 
@@ -20,7 +20,7 @@ author: 霍布斯潘
 
 
 
-<ol class="pqnote"><li>台灣可在美國聯邦國土內展現其主權象徵（包含中華民國國旗）；</li><li>推動「台北經濟和文化代表處」改為「台灣代表處」；</li><li>美國在台協會台北辦事處處長須改為代表，提名交由參院確認同意；</li><li>修正《台灣關係法》提供台灣嚇阻中國人民解放軍侵略威脅之武器；</li><li>未來 4 年提供台灣 45 億美元的國防安全援助，作為武器購買和安全援助；</li><li>將建立一個 20 億美元的貸款機制，幫助台灣購買更多的武器，並使其有資格參加戰爭儲備計畫；</li><li>承認台灣為「主要非北約盟友」—— 一個擁有更緊密的軍事和安全關係的有力地位。</li></ol>
+<ol class="pqnote"><li>台灣可在美國聯邦國土內展現其主權象徵（包含中華民國國旗）；</li><li>推動「台北經濟和文化代表處」改為「台灣代表處」；</li><li>美國在台協會台北辦事處處長須改為代表，提名交由參院確認同意；</li><li>修正《台灣關係法》提供台灣嚇阻中國人民解放軍侵略威脅之武器；</li><li>未來 4 年提供台灣 45 億美元的國防安全援助，作為武器購買和安全援助；</li><li>將建立一個 20 億美元的貸款機制，幫助台灣購買更多的武器，並使其有資格參加戰爭儲備計畫；</li><li>承認台灣為「主要非北約盟友」（Major non-NATO ally，MNNA）—— 指的是非北約成員國和美國有戰略夥伴關係。雖未達簽定共同防禦條約的程度，相較其他非北約國家，「主要非北約盟友」享有和美國更緊密的軍事安全關係與金融協助的優勢，如擁有北約成員國相同享有美國<a href="https://en.wikipedia.org/wiki/Arms_Export_Control_Act">《武器出口管制法》</a>的豁免。</li></ol>
 
 
 
@@ -56,7 +56,7 @@ author: 霍布斯潘
 
 
 
-<h2>台灣內部反對聲音</h2>
+<h2>台灣和中國的反對聲音</h2>
 
 
 
