--- a/_posts/2022-09-14-PQ-路透社-俄特使戰爭之初談妥協議確保烏克蘭不入北約-遭蒲亭拒絕.html
+++ b/_posts/2022-09-14-PQ-路透社-俄特使戰爭之初談妥協議確保烏克蘭不入北約-遭蒲亭拒絕.html
@@ -28,7 +28,7 @@ author: 王雪俐
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/846d47ad-俄羅斯特使柯札克（dmitry-kozak）一直是蒲亭的忠實副手（圖／kremlin.ru／cc-by-4.0）.jpg" alt="" class="wp-image-114441" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/846d47ad-俄羅斯特使柯札克（dmitry-kozak）一直是蒲亭的忠實副手（圖／kremlin.ru／cc-by-4.0）.jpg 650w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/846d47ad-俄羅斯特使柯札克（dmitry-kozak）一直是蒲亭的忠實副手（圖／kremlin.ru／cc-by-4.0）-300x200.jpg 300w" sizes="(max-width: 650px) 100vw, 650px" /><figcaption>俄羅斯特使柯札克（Dmitry Kozak）一直是蒲亭的忠實副手（圖／Kremlin.ru／CC BY 4.0）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/846d47ad-俄羅斯特使柯札克（dmitry-kozak）一直是蒲亭的忠實副手（圖／kremlin.ru／cc-by-4.0）.jpg" alt="" class="wp-image-114441" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/846d47ad-俄羅斯特使柯札克（dmitry-kozak）一直是蒲亭的忠實副手（圖／kremlin.ru／cc-by-4.0）.jpg 650w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/846d47ad-俄羅斯特使柯札克（dmitry-kozak）一直是蒲亭的忠實副手（圖／kremlin.ru／cc-by-4.0）-300x200.jpg 300w" sizes="(max-width: 650px) 100vw, 650px" /><figcaption>俄羅斯特使柯札克（Dmitry Kozak, 圖右）一直是蒲亭的忠實副手（圖／Kremlin.ru／CC BY 4.0）</figcaption></figure></div>
 
 
 
