--- a/_posts/2022-09-15-INMEDIA-crostini結業-餅卡苦主群逾700人-有人另花一萬補鑊.html
+++ b/_posts/2022-09-15-INMEDIA-crostini結業-餅卡苦主群逾700人-有人另花一萬補鑊.html
@@ -21,7 +21,6 @@ author: 獨媒報導
 <p>他指員工亦是看到Facebook公告才知道公司結業，又引述員工指公司過去均會在每月7日出糧，但今月起未有按時出糧，已感到「奇奇怪怪」，加上聽聞有分店被追租及收舖，感到公司早有財政壓力，所以早在10日已向工會求助。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7p3Qi17k5s" title="無標題"><img src="https://live.staticflickr.com/65535/52357000466_eee708b1c5_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>黃家和：暫緩追租後遺症浮現</strong></p>
-<p>今年《財政預算案》推出「暫緩追討欠租安排」，即指定行業商業租戶可享有3個月「保護期」延遲業主追討欠租，但7月31日後限期結束後，業主可向租戶追討累計的欠租。香港餐飲聯業協會會長黃家和坦言政府事與願違，錯判7月後疫情受控，恢復經濟。他指7月底已發覺「暫緩追租」的後遺症，8月底更見到業主追租及出律師信收舖，當中<br />
-涉及約8,000間食肆，佔整體食肆五至六成。</p>
+<p>今年《財政預算案》推出「暫緩追討欠租安排」，即指定行業商業租戶可享有3個月「保護期」延遲業主追討欠租，但7月31日後限期結束後，業主可向租戶追討累計的欠租。香港餐飲聯業協會會長黃家和坦言政府事與願違，錯判7月後疫情受控，恢復經濟。他指7月底已發覺「暫緩追租」的後遺症，8月底更見到業主追租及出律師信收舖，當中涉及約8,000間食肆，佔整體食肆五至六成。</p>
 <p>他續稱當中六、七成食肆已成功遊說業主減租或分期交租，但仍有近3.000間食肆仍在與業主拉鋸中，若本月底前仍未能達成共識，或多達2,000間食肆要結業。他又認為延遲交租是無補於事，「再延多三個月個壓力就更大，咁爆煲個情況可能更快出現，個情況唔係咁樂觀。」</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
