--- a/_posts/2022-09-15-INMEDIA-消委會測試-15款人造牛油及塗抹醬含致癌物-earth-balance-超歐盟標準.html
+++ b/_posts/2022-09-15-INMEDIA-消委會測試-15款人造牛油及塗抹醬含致癌物-earth-balance-超歐盟標準.html
@@ -31,7 +31,7 @@ author: 獨媒報導
 <p><strong>兩款脂肪塗抹醬獲5星評分  Lactima 牛油性價比最高</strong></p>
 <p>在今次測試中，消委會以安全測試、營養素含量測試，及營養標籤的標示值和測試結果的差距作總評分，兩款脂肪塗抹醬獲得5星評分，分別為 Flora Light Spread、Meadows Spread with Sunflower Oil，售價分別為每100克售8.8元，及7.6元，不過兩者就同檢出含氯丙二醇、環氧丙醇。</p>
 <p>Lactima 牛油（無鹽）Butter（unsalted）總評分雖然只有4星半，但每100克售價為12元，兼不含氯丙二醇、環氧丙醇，及在塑化劑整體評分獲5星，屬性價比最高。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/071Be752KG" title="551_Butter Infographic_2"><img src="https://live.staticflickr.com/65535/52359345545_bd1cc36d16_b.jpg" alt="551_Butter Infographic_2" /></a></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/071Be752KG" title="551_Butter Infographic_2"><img src="https://live.staticflickr.com/65535/52359345545_bd1cc36d16_b.jpg" alt="551_Butter Infographic_2" /></a><br /><em>消委會圖片</em></p>
 <p><strong>消委會指牛油屬高脂食物  建議少食</strong></p>
 <p>消委會提醒消費者，牛油、人造牛油及塗抹將產品均屬於高脂食物，建議消費者少食，並應保持均衡飲食，定期做適量運動。</p>
 <p>另外，消委會表示，無論選擇牛油、脂肪塗抹醬及聲稱的人造牛油，均應細閱包裝上的產品描述、配料表及營養標籤，留意產品的成分比例，建議參考報告內容，選擇飽和脂肪酸、反式脂肪酸含量較低，及不飽和脂肪酸含量較高的產品，特別是塗抹醬樣本之間的含量差異大；如選擇塗抹醬，應盡量揀選污染物含量較少的產品。</p>
