--- a/_posts/2022-09-15-INITIUM-早报-上合组织峰会-普京承认中国对俄乌战争存有-疑问和顾虑.html
+++ b/_posts/2022-09-15-INITIUM-早报-上合组织峰会-普京承认中国对俄乌战争存有-疑问和顾虑.html
@@ -33,8 +33,8 @@ author:
 <p>无独有偶，共和党人把持的佛罗里达州政府周三<a href="https://www.reuters.com/world/us/immigrants-land-marthas-vineyard-floridas-desantis-takes-credit-2022-09-15/">用两架飞机</a>将一批移民空运到麻省旅游胜地葡萄园岛。</p>
 <p>民主党籍麻省州参议员朱利安·西尔（Julian Cyr）表示，他们事先未得通知，运来的移民包括儿童。他还称，该省官员和志愿者随后“不惜一切代价”，采取“类似飓风后的”应对措施，为这些移民发放食物和衣服，并进行2019冠状病毒检测。</p>
 <p>该州众议员迪伦·费尔南德斯（Dylan Fernandes）称，很多人并不知道这些移民在哪，当局已承诺会给他们提供住房和工作。他谴责佛罗里达州此举是“邪恶且不人道”的阴谋，“把人命当作政治棋子”。</p>
-<h3>41岁瑞典网球名将费德勒宣布将退役</h3>
-<p>41岁瑞典网球名将<a href="https://www.reuters.com/lifestyle/sports/federer-retire-sport-after-next-weeks-laver-cup-2022-09-15/">费德勒（Roger Federer）周四发表声明</a>，宣布将在下周伦敦拉沃尔杯（Laver Cup）比赛后退役。</p>
+<h3>41岁瑞士网球名将费德勒宣布将退役</h3>
+<p>41岁瑞士网球名将<a href="https://www.reuters.com/lifestyle/sports/federer-retire-sport-after-next-weeks-laver-cup-2022-09-15/">费德勒（Roger Federer）周四发表声明</a>，宣布将在下周伦敦拉沃尔杯（Laver Cup）比赛后退役。</p>
 <p>费德勒是史上最优秀的男子网球选手之一，职业生涯共赢得20个男子单打大满贯冠军，6个ATP年终总决赛冠军和28个大师赛冠军。他累计310周世界排名第一，其中包括连续237周世界排名第一，创下男子网坛记录。</p>
 <p>由于近年膝盖受伤，他自从在去年温布尔登网球锦标赛四分之一决赛失利后，没有再打比赛。</p>
 <p>费德勒在声明中表示，过去三年他面临伤病和手术挑战，一直努力试图恢复全部竞技状态，但也清楚自己身体的能力和极限。下周在伦敦举行的拉沃尔杯比赛将是他最后一场ATP赛事，未来他也会继续打球，但不会再参加大满贯或巡回赛。</p>
