--- a/_posts/2022-09-16-PQ-日美防長會談-美方大力支持日本保有-反擊能力-延伸美核武威懾力的韌性.html
+++ b/_posts/2022-09-16-PQ-日美防長會談-美方大力支持日本保有-反擊能力-延伸美核武威懾力的韌性.html
@@ -12,7 +12,7 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-1024x683.jpg" alt="" class="wp-image-114541" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh.jpg 1976w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國國防部長奧斯汀與日本防衛大臣濱田靖一。<br>（圖／日本防衛省）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-1024x683.jpg" alt="" class="wp-image-114541" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/43d4725c-fcprjrvakaa1hoh.jpg 1976w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>美國國防部長奧斯汀與日本防衛大臣濱田靖一。<br>（圖／日本防衛省）</figcaption></figure></div>
 
 
 
