--- a/_posts/2022-09-18-INMEDIA-港超聯-傑志炒深水埗十蛋-潘沛軒包辦兩球剃伯父眼眉.html
+++ b/_posts/2022-09-18-INMEDIA-港超聯-傑志炒深水埗十蛋-潘沛軒包辦兩球剃伯父眼眉.html
@@ -51,5 +51,6 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0VU4JRk923" title="DSC_4805"><img src="https://live.staticflickr.com/65535/52365063277_58d049f761_b.jpg" width="1024" alt="DSC_4805" /></a></p>
 <p><strong>巴爾拿去向未明 朱志光：佢好似就完約</strong></p>
 <p>記者追問巴爾拿的情況，朱志光則三緘其口，稱需等待球隊與對方商討，「始終交返俾老闆，出糧嗰個唔係我嚟。可能佢講條件呀，可能嗰合約嗰啲嘢呀，佢好似就完約，我知道。呢啲我做教練只能夠教隊波，我處理唔到嗰啲球員與球會合約。」另外，朱志光表示，新加盟的外援預計在8至10日後到港。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/457R3R7FGv" title="DSC_4775"><img src="https://live.staticflickr.com/65535/52365077062_1a9115983f_b.jpg" alt="DSC_4775" /></a></p>
 <p>記者：麥馬高、周頌謙</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
