--- a/_posts/2022-09-17-PQ-帝位鞏固與傾頹-習出訪中亞-俄戰事不利蒲亭聲勢弱.html
+++ b/_posts/2022-09-17-PQ-帝位鞏固與傾頹-習出訪中亞-俄戰事不利蒲亭聲勢弱.html
@@ -16,7 +16,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網.jpeg" alt="" class="wp-image-114667" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網.jpeg 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網-300x227.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網-768x580.jpeg 768w" sizes="(max-width: 516px) 100vw, 516px" /><figcaption>中國國家主席習近平、俄羅斯總統蒲亭於上合會中合照。（圖／新華網）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網.jpeg" alt="" class="wp-image-114667" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網.jpeg 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網-300x227.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/408f532c-新華網-768x580.jpeg 768w" sizes="(max-width: 516px) 100vw, 516px" /><figcaption>中國國家主席習近平、俄羅斯總統蒲亭於上合會中合照。（圖／新華網）</figcaption></figure></div>
 
 
 
