--- a/_posts/2022-09-19-INMEDIA-羅健熙受審前拍片-稱看喜劇準備入獄.html
+++ b/_posts/2022-09-19-INMEDIA-羅健熙受審前拍片-稱看喜劇準備入獄.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_124.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>民主黨主席羅健熙在2019年理大衝突期間被捕，事後被控非法集結。案件今日開審，羅在上周五（16日）拍片，稱已做最壞打算，做好要入獄的準備，因此近排看了很多喜劇：「《飯戲攻心》上咗之後好快就睇咗。」他又提到，探訪獄中黨友時見到他們都非常堅強，對自己而言是很大的鼓勵：「咁我嗰單相比佢哋都唔係咁大件事啫。」</p>
+<img src="https://www.inmediahk.net/files/column_images/newnewdontdelete-%E5%B7%B2%E4%BF%AE%E5%BE%A9-%E5%B7%B2%E4%BF%AE%E5%BE%A9_125.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>民主黨主席羅健熙在2019年理大衝突期間被捕，事後被控非法集結。案件今周開審，羅在上周五（16日）拍片，稱已做最壞打算，做好要入獄的準備，因此近排看了很多喜劇：「《飯戲攻心》上咗之後好快就睇咗。」他又提到，探訪獄中黨友時見到他們都非常堅強，對自己而言是很大的鼓勵：「咁我嗰單相比佢哋都唔係咁大件事啫。」</p>
 <p><strong>過去兩年如常生活 開審感開心因可作了斷</strong></p>
 <p>案發至今已近三年，羅健熙指自己被捕後曾踢保，事後再被上門拘捕，故感覺一直被事件纏繞自己。羅自言，在過去兩年間努力維持正常生活，如在擔任南區區議會主席期間照常開會，也照常處理黨務；但他提到，有時到警署報到後，再回區議會開會時，「轉嗰頭又見返啲阿sir madam，成件事幾弔詭」。</p>
 <p>對於將要接受審訊，羅健熙稱自己感覺是「終於要面對現實」，近日亦忙於安排「身後事」，包括記下過去自己如何處理各種工作，讓同事日後跟進：「我阿媽要點樣呀、工作點處理、預備啲書單、朋友探訪清單⋯⋯」他指這幾年不少人都是這樣過，但親身經歷時感覺不容易面對。</p>
